Fix bug with dashboard filter suggestion dropdowns z-index

--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -255,6 +255,7 @@ $color-orange: #F16C00;
         left: 100%;
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
         background-color: white;
+        z-index: 5;
 
         &__item {
           width: 150px;
